force-app/main/default/objects/SALES_ORDER__c/SALES_ORDER__c.object-meta.xml
<CustomObject>
    <label>Goods S/O</label>
    <nameField>
        <displayFormat>GS-{000000}</displayFormat>
        <label>GOODS SALES ORDER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods S/O</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>