force-app/main/default/objects/SALES_ORDER__c/fields/ActualDispatchDate__c.field-meta.xml
<CustomField>
    <fullName>ActualDispatchDate__c</fullName>
    <label>Actual Dispatch Date</label>
    <type>Date</type>
</CustomField>