force-app/main/default/objects/SALES_ORDER__c/fields/AdditionalRequests__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRequests__c</fullName>
    <label>ADDITIONAL REQUESTS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>