force-app/main/default/objects/SALES_ORDER__c/fields/Agent1__c.field-meta.xml
<CustomField>
    <fullName>Agent1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent-1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GOODS S/O (AGENT-1)</relationshipLabel>
    <relationshipName>GoodsSOAgent1</relationshipName>
    <type>Lookup</type>
</CustomField>