force-app/main/default/objects/SALES_ORDER__c/fields/AmountBuyingincltaxDocs__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingincltaxDocs__c</fullName>
    <deprecated>true</deprecated>
    <label>Amount Buying incl tax-Docs</label>
    <summarizedField>TRSBuying__c.AmountBuyinginclTaxfor__c</summarizedField>
    <summaryForeignKey>TRSBuying__c.GOODSSALESORDER__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>