force-app/main/default/objects/SALES_ORDER__c/fields/AmountBuyingincltaxOthers__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingincltaxOthers__c</fullName>
    <deprecated>true</deprecated>
    <label>Amount Buying incl tax-Others</label>
    <summarizedField>TRSBuying__c.AmountBuyinginclTaxfor__c</summarizedField>
    <summaryFilterItems>
        <field>TRSBuying__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Buying-Others</value>
    </summaryFilterItems>
    <summaryForeignKey>TRSBuying__c.GOODSSALESORDER__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>