force-app/main/default/objects/SALES_ORDER__c/fields/BillingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>BillingStateProvince__c</fullName>
    <label>Billing State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>