force-app/main/default/objects/SALES_ORDER__c/fields/BuyingOrderPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingOrderPriceLocal__c</fullName>
    <label>BUYING ORDER PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>