force-app/main/default/objects/SALES_ORDER__c/fields/CommercialInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>CommercialInvoiceNo__c</fullName>
    <label>Commercial Invoice No#</label>
    <type>TextArea</type>
</CustomField>