force-app/main/default/objects/SALES_ORDER__c/fields/CommodityDescriptionofGoods__c.field-meta.xml
<CustomField>
    <fullName>CommodityDescriptionofGoods__c</fullName>
    <label>Commodity Description of Goods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>