force-app/main/default/objects/SALES_ORDER__c/fields/ContactDetailOfDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactDetailOfDeliveryAddress__c</fullName>
    <label>Contact Detail of Delivery Address</label>
    <type>TextArea</type>
</CustomField>