force-app/main/default/objects/SALES_ORDER__c/fields/ContainerType2__c.field-meta.xml
<CustomField>
    <fullName>ContainerType2__c</fullName>
    <label>Container Type-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>