force-app/main/default/objects/SALES_ORDER__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <label>CONTRACT ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>SalesOrder</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>