force-app/main/default/objects/SALES_ORDER__c/fields/CustomerAddress__c.field-meta.xml
<CustomField>
    <fullName>CustomerAddress__c</fullName>
    <label>Customer&apos; Address</label>
    <type>TextArea</type>
</CustomField>