force-app/main/default/objects/SALES_ORDER__c/fields/CustomerCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomerCategory__c</fullName>
    <formula>text(CustomerCompanyName__r.Business_Relationship__c)</formula>
    <label>Customer Category</label>
    <type>Text</type>
</CustomField>