force-app/main/default/objects/SALES_ORDER__c/fields/CustomerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>CustomerCompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER COMPANY NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SalesOrder</relationshipName>
    <type>Lookup</type>
</CustomField>