force-app/main/default/objects/SALES_ORDER__c/fields/CustomerOrderNo__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNo__c</fullName>
    <externalId>true</externalId>
    <label>CUSTOMER ORDER NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>