force-app/main/default/objects/SALES_ORDER__c/fields/CustomerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>CUSTOMER ORDER NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>