force-app/main/default/objects/SALES_ORDER__c/fields/DeliveryTargetDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTargetDate__c</fullName>
    <label>TARGET DELIVERY DATE</label>
    <type>Date</type>
</CustomField>