force-app/main/default/objects/SALES_ORDER__c/fields/DispatchInfoContactDate__c.field-meta.xml
<CustomField>
    <fullName>DispatchInfoContactDate__c</fullName>
    <label>Dispatch Info Contact Date</label>
    <type>Date</type>
</CustomField>