force-app/main/default/objects/SALES_ORDER__c/fields/DispatchSlipNumber__c.field-meta.xml
<CustomField>
    <fullName>DispatchSlipNumber__c</fullName>
    <label>Dispatch Slip Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>