force-app/main/default/objects/SALES_ORDER__c/fields/LCDate__c.field-meta.xml
<CustomField>
    <fullName>LCDate__c</fullName>
    <label>L/C Date</label>
    <type>Date</type>
</CustomField>