force-app/main/default/objects/SALES_ORDER__c/fields/LCNo__c.field-meta.xml
<CustomField>
    <fullName>LCNo__c</fullName>
    <label>L/C No</label>
    <type>TextArea</type>
</CustomField>