force-app/main/default/objects/SALES_ORDER__c/fields/NotifyParty__c.field-meta.xml
<CustomField>
    <fullName>NotifyParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GOODS S/O (Notify Party)</relationshipLabel>
    <relationshipName>GOODS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>