force-app/main/default/objects/SALES_ORDER__c/fields/NumberofContainer_inwords__c.field-meta.xml
<CustomField>
    <fullName>NumberofContainer_inwords__c</fullName>
    <label>Number of Container (in words)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>