force-app/main/default/objects/SALES_ORDER__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>ORDER DATE FROM CUSTOMER</label>
    <type>Date</type>
</CustomField>