force-app/main/default/objects/SALES_ORDER__c/fields/OrderIntExtType__c.field-meta.xml
<CustomField>
    <fullName>OrderIntExtType__c</fullName>
    <label>ORDER INT &amp; EXT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderIntExtType</valueSetName>
    </valueSet>
</CustomField>