force-app/main/default/objects/SALES_ORDER__c/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <label>Packing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>