force-app/main/default/objects/SALES_ORDER__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <label>Payment Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>