force-app/main/default/objects/SALES_ORDER__c/fields/PICEmailOfShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>PICEmailOfShippingAddress__c</fullName>
    <label>P.I.C Email of Shipping Address</label>
    <type>Email</type>
</CustomField>