force-app/main/default/objects/SALES_ORDER__c/fields/PICNameShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>PICNameShippingAddress__c</fullName>
    <label>P.I.C Name of Shipping Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>