force-app/main/default/objects/SALES_ORDER__c/fields/PICResellerAgent__c.field-meta.xml
<CustomField>
    <fullName>PICResellerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Reseller Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GOODS S/O (P.I.C of Reseller Agent)</relationshipLabel>
    <relationshipName>GoodsSOResellerAgent</relationshipName>
    <type>Lookup</type>
</CustomField>