force-app/main/default/objects/SALES_ORDER__c/fields/PICShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>PICShippingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Shipping Address</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GOODS S/O(P.I.C OF SHIPPING ADDRESS)</relationshipLabel>
    <relationshipName>PICShippingAddress</relationshipName>
    <type>Lookup</type>
</CustomField>