force-app/main/default/objects/SALES_ORDER__c/fields/PortofDischarge__c.field-meta.xml
<CustomField>
    <fullName>PortofDischarge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>GOODS S/O (Port of Discharge)</relationshipLabel>
    <relationshipName>GOODS_S_O1</relationshipName>
    <type>Lookup</type>
</CustomField>