force-app/main/default/objects/SALES_ORDER__c/fields/PortofLoading__c.field-meta.xml
<CustomField>
    <fullName>PortofLoading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>GOODS S/O</relationshipLabel>
    <relationshipName>GOODS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>