force-app/main/default/objects/SALES_ORDER__c/fields/ReceiptancePaymentType__c.field-meta.xml
<CustomField>
    <fullName>ReceiptancePaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>