force-app/main/default/objects/SALES_ORDER__c/fields/RequestedBillingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>RequestedBillingAmountLocal__c</fullName>
    <label>Requested Billing Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>