force-app/main/default/objects/SALES_ORDER__c/fields/RollupAmountOfBuyingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfBuyingTaxUSD__c</fullName>
    <label>ROLLUP AMOUNT OF BUYING TAX(USD)</label>
    <summarizedField>TRSBill__c.AmountOfBuyTaxUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>