force-app/main/default/objects/SALES_ORDER__c/fields/RollupAmountOfSellingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfSellingTaxUSD__c</fullName>
    <label>ROLLUP AMOUNT OF SELLING TAX(USD)</label>
    <summarizedField>TRSBill__c.AmountOfSellTaxUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>