force-app/main/default/objects/SALES_ORDER__c/fields/RollupAmountSellingTax__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountSellingTax__c</fullName>
    <label>ROLLUP AMOUNT OF SELLING TAX</label>
    <summarizedField>SalesOrderProduct__c.AmountOfSellingTax__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>