force-app/main/default/objects/SALES_ORDER__c/fields/RollupBuyingAmountInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupBuyingAmountInclTaxLocal__c</fullName>
    <label>ROLLUP BUYING AMOUNT INCL TAX(LOCAL)</label>
    <summarizedField>TRSBill__c.AmountBuyInclTAX__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>