force-app/main/default/objects/SALES_ORDER__c/fields/RollupBuyingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupBuyingAmountInclTaxUSD__c</fullName>
    <label>ROLLUP BUYING AMOUNT INCL TAX(USD)</label>
    <summarizedField>TRSBill__c.AmountBuyInclTAXUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>