force-app/main/default/objects/SALES_ORDER__c/fields/RollupFinalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupFinalNetWeight__c</fullName>
    <label>ROLLUP FINAL NET WEIGHT</label>
    <summarizedField>SalesOrderProduct__c.FinalNetWeight__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>