force-app/main/default/objects/SALES_ORDER__c/fields/RollupGWMTfromTRSBill__c.field-meta.xml
<CustomField>
    <fullName>RollupGWMTfromTRSBill__c</fullName>
    <inlineHelpText>Sum of Gross Weight(MT) from related TRS Billing</inlineHelpText>
    <label>Rollup G.W(MT)-from TRS Bill</label>
    <summarizedField>TRSBill__c.GrossWeightMT__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>