force-app/main/default/objects/SALES_ORDER__c/fields/RollupJumboBagWeightMTfromTRSBill__c.field-meta.xml
<CustomField>
    <fullName>RollupJumboBagWeightMTfromTRSBill__c</fullName>
    <inlineHelpText>Sum of Weight of jumbo bags and pallets (MT) from related TRS Billing</inlineHelpText>
    <label>Rollup JumboBag Weight(MT)-from TRS Bill</label>
    <summarizedField>TRSBill__c.Weightofjumbobagsandpallets_MT__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>