force-app/main/default/objects/SALES_ORDER__c/fields/RollupNWMTfromTRSBill__c.field-meta.xml
<CustomField>
    <fullName>RollupNWMTfromTRSBill__c</fullName>
    <inlineHelpText>Sum of Net Weight(MT) from related TRS Billing</inlineHelpText>
    <label>Rollup N.W(MT)-from TRS Bill</label>
    <summarizedField>TRSBill__c.NetWeightMT__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>