force-app/main/default/objects/SALES_ORDER__c/fields/RollupPlanGWMTfromTRSBill__c.field-meta.xml
<CustomField>
    <fullName>RollupPlanGWMTfromTRSBill__c</fullName>
    <label>Rollup Plan G.W(MT)-from TRS Bill</label>
    <summarizedField>TRSBill__c.PlanGWMT__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>