force-app/main/default/objects/SALES_ORDER__c/fields/RollupPlanNWMTfromTRSBill__c.field-meta.xml
<CustomField>
    <fullName>RollupPlanNWMTfromTRSBill__c</fullName>
    <label>Rollup Plan N.W(MT)-from TRS Bill</label>
    <summarizedField>TRSBill__c.PlanNWMT__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>