force-app/main/default/objects/SALES_ORDER__c/fields/RollupPlanQuantity__c.field-meta.xml
<CustomField>
    <fullName>RollupPlanQuantity__c</fullName>
    <label>ROLLUP PLAN QUANTITY</label>
    <summarizedField>SalesOrderProduct__c.PlannedQuantity__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>