force-app/main/default/objects/SALES_ORDER__c/fields/RollupProfitIncludeTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupProfitIncludeTaxUSD__c</fullName>
    <label>ROLLUP PROFIT INCL TAX(USD)</label>
    <summarizedField>TRSBill__c.ProfitInclTaxUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>