force-app/main/default/objects/SALES_ORDER__c/fields/RollupProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupProfitNICTaxLocal__c</fullName>
    <label>ROLLUP PROFIT NIC TAX(LOCAL)</label>
    <summarizedField>TRSBill__c.ProfitNICTaxLocal__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>