force-app/main/default/objects/SALES_ORDER__c/fields/RollupProfitNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupProfitNICTaxUSD__c</fullName>
    <label>ROLLUP PROFIT NIC TAX(USD)</label>
    <summarizedField>TRSBill__c.ProfitNICTaxUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>