force-app/main/default/objects/SALES_ORDER__c/fields/RollupRecomendedQuantity__c.field-meta.xml
<CustomField>
    <fullName>RollupRecomendedQuantity__c</fullName>
    <label>ROLLUP RECOMMENDED QUANTITY</label>
    <summarizedField>SalesOrderProduct__c.Quantity__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>