force-app/main/default/objects/SALES_ORDER__c/fields/RollupSellingAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>RollupSellingAmountInclTax__c</fullName>
    <label>ROLLUP SELLING AMOUNT INCL TAX</label>
    <summarizedField>SalesOrderProduct__c.SellingAmountInclTax__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>