force-app/main/default/objects/SALES_ORDER__c/fields/RollupSellingAmountInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupSellingAmountInclTaxUSD__c</fullName>
    <label>ROLLUP SELLING AMOUNT INCL TAX(USD)</label>
    <summarizedField>TRSBill__c.mountSellInclTAXUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>