force-app/main/default/objects/SALES_ORDER__c/fields/RollupTotalAmountBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountBuyingLocal__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <summarizedField>TRSBill__c.TotalAmountOfBuyLocal__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>