force-app/main/default/objects/SALES_ORDER__c/fields/RollupTotalAmountSelling__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountSelling__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF SELLING</label>
    <summarizedField>SalesOrderProduct__c.TotalAmountOfSelling__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>