force-app/main/default/objects/SALES_ORDER__c/fields/RollupTotalAmountSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalAmountSellingUSD__c</fullName>
    <label>ROLLUP TOTAL AMOUNT OF SELLING(USD)</label>
    <summarizedField>TRSBill__c.TotalAmountOfSellUSD__c</summarizedField>
    <summaryForeignKey>TRSBill__c.SalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>