force-app/main/default/objects/SALES_ORDER__c/fields/RollupTotalGrossWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalGrossWeight__c</fullName>
    <label>ROLLUP TOTAL GROSS WEIGHT</label>
    <summarizedField>SalesOrderProduct__c.TotalGrossWeight__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>