force-app/main/default/objects/SALES_ORDER__c/fields/RollupTotalMeasurement__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalMeasurement__c</fullName>
    <label>ROLLUP TOTAL MEASUREMENT</label>
    <summarizedField>SalesOrderProduct__c.TotalMeasurement__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>