force-app/main/default/objects/SALES_ORDER__c/fields/RollupTotalNetWeight__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalNetWeight__c</fullName>
    <label>ROLLUP TOTAL NET WEIGHT</label>
    <summarizedField>SalesOrderProduct__c.TotalNetWeight__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>