force-app/main/default/objects/SALES_ORDER__c/fields/SalesChannelCategory__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelCategory__c</fullName>
    <label>Sales Channel Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesChannelCategory</valueSetName>
    </valueSet>
</CustomField>