force-app/main/default/objects/SALES_ORDER__c/fields/SalesOrderName__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderName__c</fullName>
    <label>SALES ORDER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>