force-app/main/default/objects/SALES_ORDER__c/fields/SalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderNumber__c</fullName>
    <label>SALES ORDER NUMBER</label>
    <type>TextArea</type>
</CustomField>