force-app/main/default/objects/SALES_ORDER__c/fields/SalesOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderStatus__c</fullName>
    <label>SALES ORDER STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderStatus</valueSetName>
    </valueSet>
</CustomField>