force-app/main/default/objects/SALES_ORDER__c/fields/SalesOrderType__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderType__c</fullName>
    <label>SALES ORDER TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrderType</valueSetName>
    </valueSet>
</CustomField>