force-app/main/default/objects/SALES_ORDER__c/fields/SellerCompany__c.field-meta.xml
<CustomField>
    <fullName>SellerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GOODS S/O (Seller Company)</relationshipLabel>
    <relationshipName>GoodSOAccountSeller</relationshipName>
    <type>Lookup</type>
</CustomField>