force-app/main/default/objects/SALES_ORDER__c/fields/SellingCommercialValueUSD__c.field-meta.xml
<CustomField>
    <fullName>SellingCommercialValueUSD__c</fullName>
    <label>SELLING COMMERCIAL VALUE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>