force-app/main/default/objects/SALES_ORDER__c/fields/ServiceStartNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceStartNotificationDate__c</fullName>
    <label>Service Start Notification Date</label>
    <type>Date</type>
</CustomField>