force-app/main/default/objects/SALES_ORDER__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>SHIPPING ADDRESS</label>
    <type>TextArea</type>
</CustomField>