force-app/main/default/objects/SALES_ORDER__c/fields/ShippingDistrict__c.field-meta.xml
<CustomField>
    <fullName>ShippingDistrict__c</fullName>
    <label>Shipping District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>