force-app/main/default/objects/SALES_ORDER__c/fields/ShippingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>ShippingStateProvince__c</fullName>
    <label>Shipping State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>