force-app/main/default/objects/SALES_ORDER__c/fields/SOQRLabel__c.field-meta.xml
<CustomField>
    <fullName>SOQRLabel__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + Name , &apos;Create Qr Code for this item&apos; )</formula>
    <label>S/O QR LABEL</label>
    <type>Text</type>
</CustomField>