force-app/main/default/objects/SALES_ORDER__c/fields/TeamWorkingStatus__c.field-meta.xml
<CustomField>
    <fullName>TeamWorkingStatus__c</fullName>
    <label>TEAM WORKING STATUS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TeamWorkingStatus</valueSetName>
    </valueSet>
</CustomField>