force-app/main/default/objects/SALES_ORDER__c/fields/Total_Selling__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling__c</fullName>
    <label>Total Selling</label>
    <summarizedField>SalesOrderProduct__c.Total_Selling__c</summarizedField>
    <summaryForeignKey>SalesOrderProduct__c.GoodSalesOrderID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>