force-app/main/default/objects/SALES_ORDER__c/fields/TotalAmountofSelling_inwords__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSelling_inwords__c</fullName>
    <label>Total Amount of Selling (in words)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>