force-app/main/default/objects/SALES_ORDER__c/fields/TotalAmountReceived__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountReceived__c</fullName>
    <label>Total Amount Received</label>
    <summarizedField>ReceivablesAmount__c.AmountReceived__c</summarizedField>
    <summaryForeignKey>ReceivablesAmount__c.GoodSO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>