force-app/main/default/objects/SALES_ORDER__c/fields/TotalAmountUnreceived__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountUnreceived__c</fullName>
    <formula>Total_Selling__c  - TotalAmountReceived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Unreceived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>