force-app/main/default/objects/SALES_ORDER__c/fields/TotalNumberofContainer__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofContainer__c</fullName>
    <formula>ContainerQty1__c  +  ContainerQty2__c  +  ContainerQty3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Container</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>