force-app/main/default/objects/SALES_ORDER__c/fields/TransporterType__c.field-meta.xml
<CustomField>
    <fullName>TransporterType__c</fullName>
    <label>Transporter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransporterType</valueSetName>
    </valueSet>
</CustomField>