force-app/main/default/objects/SALES_ORDER__c/fields/UnitpriceChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>UnitpriceChargeUnit__c</fullName>
    <label>Unit price/Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ChargeUnit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD/MT</fullName>
            </value>
            <value>
                <fullName>USD/Pallet</fullName>
            </value>
            <value>
                <fullName>USD/Bag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>