force-app/main/default/objects/SALES_ORDER__c/recordTypes/StandardGoodsSalesOrder.recordType-meta.xml
<RecordType>
    <fullName>StandardGoodsSalesOrder</fullName>
    <active>true</active>
    <label>Standard Goods Sales Order</label>
</RecordType>