force-app/main/default/objects/SALES_ORDER__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrderIntExtType__c</columns>
    <columns>SalesOrderStatus__c</columns>
    <columns>SalesOrderNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CustomerCompanyName__c</columns>
    <columns>ParentCustomerCompanyName__c</columns>
    <columns>CustomerOrderNo__c</columns>
    <columns>SalesOrderName__c</columns>
    <columns>OrderDate__c</columns>
    <columns>DeliveryTargetDate__c</columns>
    <columns>ActualDeliveryDate__c</columns>
    <columns>PlannedQuantity__c</columns>
    <columns>FinalQuantity__c</columns>
    <columns>ShippingAddress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SALES_ORDER__c.StandardGoodsSalesOrder</value>
    </filters>
    <label>All</label>
</ListView>